Fix for StackOverflow & License Change.
* Removed the unnecessary margins for the list items inside the post.
* Updated the SCSS to include the new CSS.
* Changed the license from WTFPL to more kindly KINDLY Licence.

--- a/SegoeUI.scss
+++ b/SegoeUI.scss
@@ -21,3 +21,11 @@ textarea, code, tt, pre {
     }
   }
 }
+
+.post-text, .wmd-preview {
+  ul, ol {
+    li {
+      margin-bottom: 0;
+    }
+  }
+}
